# ro-agent

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
demo/: README.md  app.py
examples/: job-failure-simple.yaml  job-failure.yaml  programmatic_usage.py  prompts.yaml
ro_agent/: cli.py  signals.py
ro_agent/capabilities/: __init__.py  approval.py  factory.py
ro_agent/capabilities/profiles/: developer.yaml  eval.yaml  readonly.yaml
ro_agent/client/: model.py
ro_agent/core/: agent.py  conversations.py  session.py
ro_agent/eval/: README.md  __init__.py  cli.py  config.py  output.py  runner.py
ro_agent/eval/agentbench/: README.md  cerebras_client.py  cli.py  config.py  runner.py
ro_agent/eval/agentbench/docker/: container.py  mysql_container.py
ro_agent/eval/agentbench/evaluators/: __init__.py  db_evaluator.py  os_evaluator.py
ro_agent/eval/agentbench/tasks/: __init__.py  base.py  os_interaction.py
ro_agent/eval/agentbench/tools/: __init__.py  docker_shell.py  unrestricted_mysql.py
ro_agent/eval/birdbench/: README.md  cli.py  config.py  evaluator.py  output.py  runner.py  task.py  tools.py
ro_agent/eval/docker/: __init__.py  container.py  mysql_container.py
ro_agent/eval/evaluators/: db_evaluator.py  os_evaluator.py
ro_agent/eval/harbor/: README.md  __init__.py  agent.py  runner.py
ro_agent/eval/harbor/configs/: terminal-bench-prelim.yaml  terminal-bench-sample.yaml  terminal-bench.yaml
ro_agent/eval/tasks/: dbbench.py  os_interaction.py
ro_agent/eval/tools/: __init__.py  docker_shell.py  submit_answer.py  unrestricted_mysql.py  unrestricted_shell.py  unrestricted_sqlite.py
ro_agent/harbor/: README.md  __init__.py  job-full.yaml  job-prelim.yaml  job-sample.yaml  runner.py
ro_agent/observability/: __init__.py  config.py  context.py  processor.py
ro_agent/observability/dashboard/: __init__.py  app.py
ro_agent/observability/exporters/: __init__.py  base.py  sqlite.py
ro_agent/observability/realtime/: __init__.py
ro_agent/observability/storage/: __init__.py  sqlite.py
ro_agent/prompts/: __init__.py  default.md  eval.md  eval_bird.md  eval_terminal.md  loader.py  renderer.py
ro_agent/tools/: base.py  registry.py
ro_agent/tools/handlers/: __init__.py  bash.py  database.py  edit.py  find_files.py  glob.py  grep.py  grep_files.py  list.py  list_dir.py  mysql.py  oracle.py  postgres.py  read.py  read_file.py  search.py  shell.py  sqlite.py  vertica.py  write.py
